dnl libral
dnl Germanov Artem <ru.netz@gmail.com>

dnl Init
AC_INIT([libtoolz],[0.1])
AC_CONFIG_SRCDIR([src/config.cpp])
#AM_INIT_AUTOMAKE([color-tests])
AM_INIT_AUTOMAKE()
LT_PREREQ([2.2])
LT_INIT([dlopen])

AC_CONFIG_MACRO_DIR([m4])
AC_PROG_LIBTOOL
AC_PROG_CXX

dnl Output
AC_OUTPUT([Makefile src/Makefile test/Makefile])
