lib_LTLIBRARIES = libtoolz.la 
libtoolz_la_SOURCES = config.cpp net.cpp profile.cpp strings.cpp include/toolz/config.h include/toolz/log.h include/toolz/net.h include/toolz/profile.h include/toolz/strings.h include/toolz/types.h 
libtoolz_la_CPPFLAGS = $(DEPS_CFLAGS) -I include/
libtoolz_la_LIBADD = $(DEPS_LIBS) 
include_HEADERS = include/toolz/config.h include/toolz/log.h include/toolz/net.h include/toolz/profile.h include/toolz/strings.h include/toolz/types.h
