lib_LTLIBRARIES = libtoolz.la 
libtoolz_la_SOURCES = config.cpp net.cpp profile.cpp strings.cpp log.cpp crypt.cpp httpd.cpp synchronization.cpp file.cpp newline_reader.cpp event.cpp binary_writer.cpp signals.cpp time.cpp include/toolz/config.h include/toolz/log.h include/toolz/net.h include/toolz/profile.h include/toolz/strings.h include/toolz/types.h include/toolz/crypt.h include/toolz/httpd.h include/toolz/httpd_req.h include/toolz/algorithm.h include/toolz/synchronization.h compat/sys/eventfd.h include/toolz/file.h include/toolz/event.h include/toolz/signals.h include/toolz/binary_writer.h include/toolz/time.h
libtoolz_la_CPPFLAGS = $(DEPS_CFLAGS) -I include/ -idirafter compat
libtoolz_la_LIBADD = $(DEPS_LIBS) 
libtoolz_la_includedir = $(includedir)/toolz/
libtoolz_la_include_HEADERS = include/toolz/config.h include/toolz/log.h include/toolz/net.h include/toolz/profile.h include/toolz/strings.h include/toolz/types.h include/toolz/crypt.h include/toolz/httpd.h include/toolz/httpd_req.h include/toolz/algorithm.h include/toolz/synchronization.h compat/sys/eventfd.h include/toolz/file.h include/toolz/event.h include/toolz/newline_reader.h include/toolz/signals.h include/toolz/binary_writer.h include/toolz/time.h
